--- a/css/general.css
+++ b/css/general.css
@@ -40,6 +40,11 @@ p {
     -ms-text-size-adjust:100%;
     text-size-adjust:100%
 }
+p.code {
+    font-family: FiraMono, monospace !important;
+    font-size: .9em !important;
+    font-weight: 300;
+}
 section {
     display: table-row;
 }
@@ -72,6 +77,15 @@ div#bind, div.keyword {
     padding-right: 25px;
     color: white;
     margin-top: 30px;
+}
+div.keyword#cpu, div.keyword#gpu {
+    padding-top: 0px;
+    padding-bottom: 12px;
+    line-height: 34px;
+}
+div.keyword#cpu {
+    padding-top: 1px;
+    padding-bottom: 11px;
 }
 div.title {
     font-size: 34px;
