--- a/css/general.css
+++ b/css/general.css
@@ -9,7 +9,6 @@ html, body {
     padding: 0px;
     display: block;
     overflow-x: hidden;
-    background-color: rgb(17,17,17);
     -webkit-text-size-adjust: 100%;
 }
 body {
@@ -71,12 +70,16 @@ div#bind, div.keyword {
     font-size: 34px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    border: 3px solid white;
+    border: 3px solid black;
     border-radius: 2px;
     padding-left: 25px;
     padding-right: 25px;
-    color: white;
     margin-top: 30px;
+    color: black;
+}
+div.keyword {
+    border: 0;
+    color: white;
 }
 div.keyword#cpu, div.keyword#gpu {
     padding-top: 0px;
@@ -127,13 +130,20 @@ div#more {
     color: #555;
 }
 a#ethz {
-    display: none;
+    display: block;
     position: absolute;
-    right: 35px;
-    top: 25px;
+    right: 30px;
+    top: 30px;
+    z-index: 1;
 }
 a#ethz img {
     height: 12px;
+}
+a#github img {
+    vertical-align: middle;
+    margin-left: 13px;
+    height: 32px;
+    margin-top: -8px;
 }
 div.how {
     display: none;
@@ -149,7 +159,8 @@ section#footer {
     height: 300px;
     background-color: white;
 }
-section#footer div.message {
+section#footer div.message,
+section#intro div.message {
     color: black; margin: 0;
 }
 section#footer div.title {
@@ -158,6 +169,7 @@ section#footer div.title {
 
 p.highlight {
     color: rgb(59,200,220) !important;
+    font-weight: 400;
 }
 span.blue {
     color: rgb(0,207,255);
