--- a/css/general.css
+++ b/css/general.css
@@ -47,7 +47,7 @@ p.code {
 section {
     display: table-row;
 }
-section.content, section#footer {
+section.content {
     display: table-row;
     width: 60%;
     max-width: 900px;
@@ -63,32 +63,23 @@ div.cell {
     display: table-cell; 
     vertical-align: middle;
 }
-div#bind, div.keyword {
+div#bind {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 34px;
+    left: 35px; top: 35px;
+    font-size: 30px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     border: 3px solid black;
     border-radius: 2px;
     padding-left: 25px;
     padding-right: 25px;
-    margin-top: 30px;
     color: black;
 }
-div.keyword {
-    border: 0;
-    color: white;
-}
-div.keyword#cpu, div.keyword#gpu {
-    padding-top: 0px;
-    padding-bottom: 12px;
-    line-height: 34px;
-}
-div.keyword#cpu {
-    padding-top: 1px;
-    padding-bottom: 11px;
+div#description {
+    position: absolute;
+    left: 190px; top: 35px;
+    font-size: 20px;
+    font-weight: bold;
 }
 div.title {
     font-size: 34px;
@@ -96,27 +87,22 @@ div.title {
     font-weight: 300;
     color: white;
     opacity: 1;
-    margin-top: 120px;
+    margin-top: 80px;
 }
 div.message {
-    font-family: 'Open Sans';
-    font-weight: 200;
+    font-family: FiraMono;
+    font-weight: 600;
     display: block;
-    font-size: 20px;
-    margin-top: 20px;
+    font-size: 70px;
     line-height: 150%;
     text-align: center;
+    color: black; 
 }
-div.message a {
-    color: rgb(39,205,170);
-    text-decoration: none;
-}
-div.message p {
-    display: inline-block;
-    width: max-content;
-    text-align: left;
-    color: white;
-    font: inherit;
+p.highlight {
+    color: #CCC;
+    font-size: 12px;
+    font-weight: 400 !important;
+    margin-top: -30px;
 }
 div#more {
     display: block;
@@ -133,11 +119,8 @@ a#ethz {
     display: block;
     position: absolute;
     right: 30px;
-    top: 30px;
+    bottom: 30px;
     z-index: 1;
-}
-a#ethz img {
-    height: 12px;
 }
 a#github img {
     vertical-align: middle;
@@ -156,20 +139,23 @@ div.how {
     top: 0px;
 }
 section#footer {
-    height: 300px;
-    background-color: white;
+    position: absolute; bottom: 0px;
+    padding-bottom: 30px;
+    width: 100%;
 }
-section#footer div.message,
-section#intro div.message {
-    color: black; margin: 0;
+section#footer div.link {
+    display: inline-block;
+    margin-left: 35px;
 }
-section#footer div.title {
-    margin: 0;
+section#footer div.link a {
+    color: black; text-decoration: none;
+    font-weight: bold;
 }
-
-p.highlight {
-    color: rgb(59,200,220) !important;
-    font-weight: 400;
+section#footer div.link img {
+    height: 20px;
+    vertical-align: middle;
+    margin-top: -5px;
+    margin-left: 10px;
 }
 span.blue {
     color: rgb(0,207,255);
