--- a/css/general.css
+++ b/css/general.css
@@ -114,7 +114,7 @@ section#footer div.link {
     margin-left: 35px;
 }
 section#footer div.link a {
-    color: black; text-decoration: none;
+    color: black; text-decoration: underline;
     font-weight: bold;
 }
 section#footer div.link img {
